RESOLVED FIXED 254435
InteractionRegions grouped together should not overlap
https://bugs.webkit.org/show_bug.cgi?id=254435
Summary InteractionRegions grouped together should not overlap
Etienne
Reported 2023-03-24 10:43:25 PDT
InteractionRegions grouped together should not overlap
Attachments
Etienne
Comment 1 2023-03-24 11:31:12 PDT
Etienne
Comment 2 2023-03-24 11:31:54 PDT
EWS
Comment 3 2023-03-27 02:50:23 PDT
Committed 262142@main (9754b3656efb): <https://commits.webkit.org/262142@main> Reviewed commits have been landed. Closing PR #11938 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.