InteractionRegions grouped together should not overlap https://bugs.webkit.org/show_bug.cgi?id=254435 <rdar://107135607>

Reviewed by Tim Horton.

De-duplicate overlapping rects for InteractionRegions that have the same
element identifier.

* Source/WebCore/rendering/EventRegion.h:
Store discovered `Region`s instead of `IntRect`s.
* Source/WebCore/rendering/EventRegion.cpp:
(WebCore::EventRegionContext::uniteInteractionRegions):
(WebCore::EventRegionContext::shouldConsolidateInteractionRegion):
Keep track of the full united region per element.
Subtract the known region from the new InteractionRegion's
`regionInLayerCoordinates` to avoid overlap.

* LayoutTests/interaction-region/overlap-same-group-expected.txt: Copied from LayoutTests/interaction-region/wrapped-inline-link-expected.txt.
* LayoutTests/interaction-region/overlap-same-group.html: Added.
Add a new test covering the change.
* LayoutTests/interaction-region/wrapped-inline-link-expected.txt:
Update text expectation now that inline fragments don't overlap.

Canonical link: https://commits.webkit.org/262142@main